# redactor

./: .gitignore  LICENSE  README.md  pyproject.toml  redactor.example.toml
.github/workflows/: ci.yml
assets/: make_icon.py
docs/: GUIDE.md  HARSH_TESTS.md  PROJECT_STATUS.md
packaging/: README.md
packaging/windows/: Redactor.bat  make-shortcut.vbs
src/redactor/: __init__.py  __main__.py  allowlist.py  audit.py  cli.py  clipboard.py  config.py  githook.py  models.py  pipeline.py  redaction.py  resolver.py  scanner.py
src/redactor/detectors/: __init__.py  ai_providers.py  base.py  builtins.py  cloud.py  connection.py  crypto.py  custom.py  heuristics.py  llm.py  pii.py  saas.py  vcs.py  web.py
src/redactor/llm/: __init__.py  backend.py
src/redactor/webui/: __init__.py  index.html  server.py
tests/: test_detectors.py  test_heuristics.py  test_llm.py  test_m3.py  test_m5.py  test_pipeline.py  test_webui.py
