[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redactor"
version = "0.1.0"
description = "Local, privacy-first text sanitizer — redact secrets before sharing text with external AI assistants."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Sina Kashani" }]
keywords = ["security", "redaction", "secrets", "privacy", "sanitization", "pii"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Security",
]
# Deliberately zero runtime dependencies: the deterministic core is stdlib-only.
# This keeps the tool trivially auditable and guarantees it can never phone home.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]

[project.scripts]
scrub = "redactor.cli:main"

[project.urls]
Homepage = "https://github.com/its30NA/redactor"

[tool.hatch.build.targets.wheel]
packages = ["src/redactor"]
# Ship the web UI's HTML alongside the Python package.
artifacts = ["src/redactor/webui/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
